--- a/layouts/fettle.html
+++ b/layouts/fettle.html
@@ -29,10 +29,10 @@
             <div x-data="{ open: false }" class="relative z-40 flex-1 text-right">
                 <div :class="{ 'flex' : open, 'hidden' : open === false }" class="z-40 px-6 fixed md:relative top-0 left-0 w-full md:w-auto h-screen md:h-auto md:flex flex-col md:flex-row items-center justify-start md:justify-end pt-32 md:pt-0 overflow-y-scroll md:overflow-visible bg-gray-200 text-gray-900 md:text-current md:bg-transparent leading-loose text-cyan-900 text-sm md:text-sm font-semibold tracking-widest hidden uppercase font-heading">
                     <a href="/" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">Home</a>
-                    <a href="/about" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">About</a>
-                    <a href="/blog" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">Blog</a>
-                    <a href="/portfolio" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">Portfolio</a>
-                    <a href="/contact" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">Contact</a>
+                    <a href="/#about" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">About</a>
+                    <a href="/#blog" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">Blog</a>
+                    <a href="/#portfolio" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">Portfolio</a>
+                    <a href="/#contact" class="text-left block w-full md:w-auto border-b border-gray-300 md:border-none py-4 md:py-0 md:ml-8 hover:opacity-50">Contact</a>
                     <div class="flex md:hidden items-center justify-center my-12">
                         <a href="#" class="mx-4">
                             <svg class="w-4 h-4 fill-current" viewBox="0 0 24 24">
